# Roaming

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gx/roaming/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gx/roaming/: BaseActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gx/roaming/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
roaming/: CMakeLists.txt  build.gradle
roaming/src/androidTest/java/com/model/roaming/: ExampleInstrumentedTest.java
roaming/src/main/: AndroidManifest.xml
roaming/src/main/cpp/: OsgHeaderFiles.h  OsgMainApp.cpp  OsgMainApp.h  RoamingNativeLib.cpp
roaming/src/main/java/com/model/roaming/: RoamingSurfaceView.java
roaming/src/main/java/com/model/roaming/element/: CameraModel.java  ModelViewMatrix.java  ModelViewMatrixCollection.java  Vec3f.java  Vec4f.java
roaming/src/main/java/com/model/roaming/jni/: RoamingNative.java
roaming/src/test/java/com/model/roaming/: ExampleUnitTest.java
